ProdIND/ProdPrograms/force-app/main/default/objects/Existing_EMI__c/Existing_EMI__c.object-meta.xml
<CustomObject>
    <label>Existing EMI</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Existing EMI Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Existing EMIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>