ProdIND/ProdPrograms/force-app/main/default/objects/Existing_EMI__c/fields/Applicant_Id__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Id__c</fullName>
    <label>Applicant Id</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipName>Existing_EMIs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>