ProdIND/ProdPrograms/force-app/main/default/objects/Existing_EMI__c/fields/EMI__c.field-meta.xml
<CustomField>
    <fullName>EMI__c</fullName>
    <label>EMI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>