ProdIND/ProdPrograms/force-app/main/default/objects/Existing_EMI__c/fields/Lower_EMI_Limit__c.field-meta.xml
<CustomField>
    <fullName>Lower_EMI_Limit__c</fullName>
    <label>Lower EMI Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>