ProdIND/ProdPrograms/force-app/main/default/objects/Existing_EMI__c/fields/Upper_EMI_Limit__c.field-meta.xml
<CustomField>
    <fullName>Upper_EMI_Limit__c</fullName>
    <label>Upper EMI Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>