ProdIND/ProdPrograms/force-app/main/default/objects/Existing_EMI__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Applicant_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>EMI__c</columns>
    <columns>Outstanding_Amount__c</columns>
    <columns>Loan_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>